Bug 68620 - [bug] Zoom and touch don't work correctly together
Summary: [bug] Zoom and touch don't work correctly together
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-27 17:45 UTC by Brian Lovin
Modified: 2014-05-08 19:22 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Brian Lovin 2013-08-27 17:45:19 UTC
If you launch simple-touch, zoom in using <meta>+<mouse scroll>, then touch simple-touch you can observe that the coordinates touched in simple touch are off by the amount that one is zoomed in.

Observed on 1.2.1 and on master (c4df4082c24ab430d1f91970302702e6078221f3)
Comment 1 Neil Roberts 2014-05-01 15:17:55 UTC
I've posted a patch for this on the mailing list:

http://lists.freedesktop.org/archives/wayland-devel/2014-May/014554.html
Comment 2 Kristian Høgsberg 2014-05-01 16:13:16 UTC
commit eb5a200807b59cb8613d7c9a3ceed795699801f7
Author: Neil Roberts <neil@linux.intel.com>
Date:   Thu May 1 16:13:55 2014 +0100

    Take into account the zoom when applying the output transform
    
    When converting output-relative coordinates (such as from an input
    event) to global coordinates it now takes into account the zoom
    transform. Previously this would only work for the primary pointer
    because the transform doesn't affect the primary pointer position due
    to that way zoom follows the mouse. Touch events and multiple pointers
    were not working correctly.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=68620


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.